fixed layout issues

--- a/guide/guide.css
+++ b/guide/guide.css
@@ -20,7 +20,7 @@ div{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 50vw;
+    width: 70vw;
     aspect-ratio: 1 / 1;
     padding: 20px;
     border-radius: 25px;
